$Id: History,v 1.39 2002-10-14 07:42:25 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

October 14, 2002  G. Cosmo                 geommng-V04-01-01
- G4PVParameterised[.hh.cc], G4PVPlacement[.hh.cc]:
  Added new method IsParameterised() to enquire for existing parameterisation
  for a placed volume.
- G4PVReplica[.hh.cc], G4VPhysicalVolume[.hh.cc]:
  Added methods IsParameterised() and GetMultiplicity() to enquire for existing
  parameterisation of placed volume, and number of replicated volumes.

September 11, 2002  G. Cosmo               geommng-V04-01-00
- G4AssemblyVolume[.hh.icc.cc]:
  o Fixed bug #409 concerning missing imprint counter method.
  o Fixed bug #410 concerning the internal counting mechanism.
    The fix involved the addition of a new data member fAssemblyID,
    holding the instance ID of the given object derived from
    class-wide counter. Corresponding accessor methods has been
    added as well.
- Updated unit test TestAssemblyVolume, to add call to G4RunManager
  for resetting nagivator state in TstVADetectorConstruction.cc.

June 24, 2002  G. Cosmo                    geommng-V04-00-08
- G4AssemblyVolume[.hh.cc]:
  o Moved accessors to assembly counters to public.